// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPluginProject creates a backend plugin project 1`] = `
[
  [
    ".gitignore",
    "node_modules
dist
dist-types
coverage
*.tsbuildinfo
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

An RHDH dynamic backend plugin using the New Backend System.

## Development

\`\`\`bash
yarn install
yarn build
yarn test
\`\`\`

## Exporting

Export or package this plugin without adding the RHDH CLI to this project:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
npx @red-hat-developer-hub/cli plugin package --export-to ./plugin-registry
\`\`\`

RHDH Dynamic Plugin Factory is the preferred workflow for repeatable build and packaging automation.
",
  ],
  [
    "backstage.json",
    "{ "version": "1.54.0" }
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin-backend",
  "version": "0.1.0",
  "packageManager": "yarn@4.17.1",
  "private": true,
  "license": "Apache-2.0",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "backstage": { "role": "backend-plugin", "pluginId": "example-plugin" },
  "scripts": {
    "start": "backstage-cli package start",
    "build": "yarn tsc && backstage-cli package build",
    "tsc": "tsc --declaration",
    "test": "backstage-cli package test --passWithNoTests"
  },
  "dependencies": { "@backstage/backend-plugin-api": "1.10.0" },
  "devDependencies": {
    "@backstage/backend-defaults": "0.12.5",
    "@backstage/cli": "0.36.5",
    "@types/jest": "^29.5.14",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "typescript": "^5.4.5"
  }
}
",
  ],
  [
    "src/index.ts",
    "import {
  coreServices,
  createBackendPlugin,
} from '@backstage/backend-plugin-api';

const plugin = createBackendPlugin({
  pluginId: 'example-plugin',
  register(reg) {
    reg.registerInit({
      deps: {
        httpRouter: coreServices.httpRouter,
        logger: coreServices.logger,
      },
      async init({ httpRouter, logger }) {
        httpRouter.addAuthPolicy({
          path: '/health',
          allow: 'unauthenticated',
        });
        httpRouter.use((request, response, next) => {
          if (request.path !== '/health') {
            next();
            return;
          }
          logger.info('Health check requested');
          response.status(200).json({ status: 'ok' });
        });
      },
    });
  },
});

export default plugin;
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": ["src", "dev"],
  "compilerOptions": {
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
  [
    "dev/index.ts",
    "import { createBackend } from '@backstage/backend-defaults';

const backend = createBackend();

backend.add(import('../src'));
backend.start();
",
  ],
]
`;

exports[`createPluginProject creates a catalog-processor-module plugin project 1`] = `
[
  [
    ".gitignore",
    "node_modules
dist
dist-types
coverage
*.tsbuildinfo
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

An RHDH dynamic catalog processor module.

## Development

\`\`\`bash
yarn install
yarn build
yarn test
\`\`\`

## Exporting

Export or package this plugin without adding the RHDH CLI to this project:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
npx @red-hat-developer-hub/cli plugin package --export-to ./plugin-registry
\`\`\`

RHDH Dynamic Plugin Factory is the preferred workflow for repeatable build and packaging automation.
",
  ],
  [
    "backstage.json",
    "{ "version": "1.54.0" }
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin-catalog-processor-module",
  "version": "0.1.0",
  "packageManager": "yarn@4.17.1",
  "private": true,
  "license": "Apache-2.0",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "backstage": {
    "role": "backend-plugin-module",
    "pluginId": "catalog",
    "pluginPackage": "@backstage/plugin-catalog-backend"
  },
  "scripts": {
    "build": "yarn tsc && backstage-cli package build",
    "tsc": "tsc --declaration",
    "test": "backstage-cli package test --passWithNoTests"
  },
  "dependencies": {
    "@backstage/backend-plugin-api": "1.10.0",
    "@backstage/catalog-model": "1.10.0",
    "@backstage/plugin-catalog-node": "2.2.4"
  },
  "devDependencies": {
    "@backstage/cli": "0.36.5",
    "@types/jest": "^29.5.14",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "typescript": "^5.4.5"
  }
}
",
  ],
  [
    "src/index.ts",
    "import { createBackendModule } from '@backstage/backend-plugin-api';
import {
  catalogProcessingExtensionPoint,
  type CatalogProcessor,
} from '@backstage/plugin-catalog-node';

const processor: CatalogProcessor = {
  getProcessorName: () => 'example-pluginProcessor',
};

const catalogBackendModule = createBackendModule({
  pluginId: 'catalog',
  moduleId: 'example-plugin',
  register(reg) {
    reg.registerInit({
      deps: { catalog: catalogProcessingExtensionPoint },
      async init({ catalog }) {
        catalog.addProcessor(processor);
      },
    });
  },
});

export default catalogBackendModule;
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": ["src"],
  "compilerOptions": {
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
]
`;

exports[`createPluginProject creates a frontend plugin project 1`] = `
[
  [
    ".gitignore",
    "node_modules
dist
dist-types
coverage
*.tsbuildinfo
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

An RHDH dynamic frontend plugin using the New Frontend System.

## Development

\`\`\`bash
yarn install
yarn build
yarn test
\`\`\`

## Exporting

Export or package this plugin without adding the RHDH CLI to this project:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
npx @red-hat-developer-hub/cli plugin package --export-to ./plugin-registry
\`\`\`

RHDH Dynamic Plugin Factory is the preferred workflow for repeatable build and packaging automation.
",
  ],
  [
    "backstage.json",
    "{ "version": "1.54.0" }
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin",
  "version": "0.1.0",
  "packageManager": "yarn@4.17.1",
  "private": true,
  "license": "Apache-2.0",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "backstage": { "role": "frontend-plugin", "pluginId": "example-plugin" },
  "scripts": {
    "start": "backstage-cli package start",
    "build": "yarn tsc && backstage-cli package build",
    "tsc": "tsc --declaration",
    "test": "backstage-cli package test --passWithNoTests"
  },
  "dependencies": {
    "@backstage/core-plugin-api": "1.12.7",
    "@backstage/frontend-plugin-api": "0.17.2"
  },
  "devDependencies": {
    "@backstage/cli": "0.36.5",
    "@backstage/frontend-defaults": "0.4.5",
    "@types/jest": "^29.5.14",
    "@types/react": "^18.0.0",
    "@types/react-dom": "^18.0.0",
    "react": "^18.0.0",
    "react-dom": "^18.0.0",
    "react-router-dom": "^6.30.2",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "typescript": "^5.4.5"
  },
  "peerDependencies": {
    "react": "^18.0.0",
    "react-dom": "^18.0.0",
    "react-router-dom": "^6.30.2"
  }
}
",
  ],
  [
    "src/index.ts",
    "import { createRouteRef } from '@backstage/core-plugin-api';
import { createFrontendPlugin, PageBlueprint } from '@backstage/frontend-plugin-api';
import React from 'react';

const rootRouteRef = createRouteRef({ id: 'example-plugin' });
const page = PageBlueprint.make({
  params: {
    title: 'example-plugin',
    path: '/example-plugin',
    routeRef: rootRouteRef,
    loader: () => import('./PluginPage').then(m => React.createElement(m.PluginPage)),
  },
});

export default createFrontendPlugin({
  pluginId: 'example-plugin',
  extensions: [page],
  routes: { root: rootRouteRef },
});
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": ["src", "dev"],
  "compilerOptions": {
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
  [
    "src/PluginPage.tsx",
    "import React from 'react';

export function PluginPage() {
  return React.createElement('h1', undefined, 'example-plugin');
}
",
  ],
  [
    "dev/index.tsx",
    "import ReactDOM from 'react-dom/client';

import { createApp } from '@backstage/frontend-defaults';

import plugin from '../src';

const app = createApp({ features: [plugin] });

ReactDOM.createRoot(document.getElementById('root')!).render(app.createRoot());
",
  ],
]
`;
